# knowledge_base_qa_bot

./: .dockerignore  .env.example  .env.prod.example  .gitattributes  .gitignore  CLAUDE.md  CONTEXT.md  Dockerfile  PROMPT.md  README.md  conftest.py  conftest_support.py  docker-compose.prod.yml  pyproject.toml
eval/paraphrase_comparison/: README.md  build_wiki_fixtures.py  charts.py  generate_paraphrases.py  generate_paraphrases_v2.py  gold_sections.yaml  loader.py  metric.py  models.py  probes.yaml  pyproject.toml  queries.yaml  rekey.py  render_rerank_chart.py  report.md  report.offline-tracer.md  run_comparison.py  runner.py  spotcheck.py  stacks.py  statistics.py
eval/paraphrase_comparison/corpus/: account_management.md  account_security.md  acme_shop_about.md  bulk_orders.md  customer_support.md  damaged_items.md  gift_cards.md  international_shipping.md  product_care.md  (+9 more)
gateway/: pyproject.toml
gateway/app/: budget.py  conversation_store.py  error_logging.py  feedback.py  logger.py  main.py  middleware.py  query_rewriting.py  ratelimit.py  routes.py  sse_capacity.py  warmup.py
gateway/prototype/: ask-wiki-rag-minimal.html
gateway/static/: console.html  index.html  shared.css
gateway/tests/: conftest.py  test_admin_path_coverage.py  test_budget_calibration.py  test_budget_concurrency.py  test_budget_degraded_serving.py  test_budget_read_reserved.py  test_chat_stream.py  test_chat_stream_filing.py  test_chat_stream_hybrid.py  test_chat_stream_rag.py  test_chat_stream_rag_lazy.py  test_chat_stream_wiki_lazy.py  test_collision_middleware.py  test_conversation_store.py  test_crossstack_coherence.py  test_error_logging_middleware.py  test_feedback_route.py  test_gateway_logger.py  test_hybrid_index_route.py  test_import_jobs_middleware.py  test_lifespan_cold_start.py  test_llm_error_sse.py  test_multiturn_filing_original_question.py  test_multiturn_routes.py  test_pages_alias_middleware.py  test_pages_alias_remove_middleware.py  test_pages_delete_middleware.py  test_prod_middleware.py  test_qa_promote_batch_middleware.py  test_qa_refile_middleware.py  test_query_rewrite_prompt_safety.py  test_query_rewriting.py  test_query_rewriting_determinism.py  test_rag_mount.py  test_rate_limit_middleware.py  test_ratelimit.py  test_read_endpoints.py  test_read_index_freshness.py  test_read_tree_recursive_endpoint.py  test_reconcile_middleware.py  (+59 more)
hybrid_kb/: pyproject.toml
hybrid_kb/app/: dense_index.py  logger.py  query.py  rerank.py  retrieval.py
hybrid_kb/tests/: conftest.py  test_answer_over_sections.py  test_committed_seed_guard.py  test_dense_index.py  test_dense_index_live.py  test_llm_determinism.py  test_query.py  test_query_live.py  test_rerank.py  test_retrieval.py  test_stream.py  test_warm_clients.py  test_warmup_seam.py
kb_cli/: pyproject.toml
kb_cli/kb_cli/: __init__.py  main.py
kb_cli/tests/: conftest.py  test_cli.py  test_cli_alias.py  test_cli_import.py  test_cli_ingest.py  test_cli_lint.py  test_cli_lint_c12_alias_collision.py  test_cli_lint_c3_claims.py  test_cli_lint_c3_routed_fix_source.py  test_cli_lint_c5_routed_fix_source.py  test_cli_lint_qa_visibility.py  test_cli_lint_routed_coverage.py  test_cli_qa.py  test_cli_source.py  test_cli_transcribe.py  test_dotenv_parity.py  test_entry_imports.py
kb_mcp/: pyproject.toml
kb_mcp/kb_mcp/: __init__.py  __main__.py  freshness.py  hot_cache.py  ingest_jobs.py  normalizer.py  qa_view.py  server.py
kb_mcp/tests/: conftest.py  test_freshness.py  test_hot_cache.py  test_kb_ask.py  test_kb_capture.py  test_kb_hybrid.py  test_kb_import.py  test_kb_index_lint.py  test_kb_ingest.py  test_kb_ingest_async.py  test_kb_ingest_jobs.py  test_kb_lint_c3_fix_source.py  test_kb_lint_c5_fix_source.py  test_kb_lint_qa_visibility.py  test_kb_lint_routed_coverage.py  test_kb_search.py  test_kb_source_trash.py  test_kb_transcribe.py  test_main.py  test_main_imports.py  test_no_gate_resolving_tools.py  test_normalizer.py  test_qa_view.py
markdown_kb/: pyproject.toml
markdown_kb/app/: _paths.py  atomic.py  capture.py  errors.py  grounding.py  import_jobs.py  importer.py  indexer.py  ingest.py  kangxi_normalize.py  lint.py  logger.py  main.py  pages.py  prompt_builder.py  prompt_safety.py  qa.py  read.py  reconcile.py  retrieval.py  routes.py  schemas.py  slugs.py  source_lifecycle.py  sse.py  structure_enrichment.py  templates.py  transcribe_jobs.py  transcriber.py  upload.py  wiki_index.py  wiki_writer.py
markdown_kb/tests/: README.md  conftest.py  test_alias_bm25_invariant.py  test_atomic.py  test_bilingual_parallel_corpus.py  test_bm25_lang_filter.py  test_capture.py  test_chat_drafter_prompt_safety.py  test_chat_errors.py  test_chat_fallback.py  test_chat_grounded.py  test_chat_grounding_integration.py  test_chat_live.py  test_cjk_retrieval.py  test_coding_standard_purity.py  test_collision.py  test_committed_index_quarantine_guard.py  test_detect_lang.py  test_dominant_script_routing.py  test_expand_to_pages.py  test_import_batch_partial_failure.py  test_import_collision.py  test_import_encoding_guard.py  test_import_failure_modes.py  test_import_filename_validation.py  test_import_hash_drift.py  test_import_hash_skip.py  test_import_html_happy_path.py  test_import_jobs.py  test_import_jobs_route.py  test_import_md_passthrough.py  test_import_nested_raw.py  test_import_nfc_normalize.py  test_import_path.py  test_import_pdf_failure_modes.py  test_import_pdf_happy_path.py  test_import_pdf_hardening.py  test_import_pdf_kangxi_normalization.py  test_import_readme_marker.py  test_import_source_path_validation.py  (+64 more)
vector_rag/: README.md  pyproject.toml
vector_rag/app/: indexer.py  logger.py  main.py  retrieval.py  routes.py  schemas.py
vector_rag/tests/: conftest.py  test_chat.py  test_chat_live.py  test_chat_prompt_safety.py  test_lang_tagging.py  test_lazy_load.py  test_llm_determinism.py  test_llm_error_contract.py  test_persistence.py  test_protocol_conformance.py  test_rag_citation_path.py  test_rag_distance_gate.py  test_rag_lang_filter.py  test_stream_query.py  test_system_prompt.py  test_warm_clients.py
(+852 files in other folders)
