[project]
name = "knowledge_base_qa_bot"
version = "0.1.0"
description = "Grounded Q&A bot over a small Markdown knowledge base. The active prototype lives in markdown_kb/ (BM25 over heading sections, Stack A). vector_rag/ (Stack B: FAISS over chunked raw Sources) is now a workspace member after its LangChain imports were migrated 0.x -> 1.x in Phase 8. The eval/paraphrase_comparison/ package runs both stacks in-process for the retrieval comparison."
requires-python = ">=3.11"
dependencies = [
    "python-dotenv>=1.2.2",
]

[tool.uv]
package = false

[tool.uv.workspace]
members = ["markdown_kb", "vector_rag", "hybrid_kb", "eval/paraphrase_comparison", "gateway", "kb_mcp", "kb_cli"]

[dependency-groups]
dev = [
    "pytest>=9.0",
    "httpx>=0.28",
]
# Optional, eval-only: the Hybrid cross-encoder reranker (ADR-0019 / #310). Brings
# in sentence-transformers + torch + the ~2.3 GB bge-reranker-v2-m3 model at use
# time. Installed ONLY via `uv sync --group rerank` for the paraphrase-comparison
# eval / a dev box; the production image (`uv sync --no-dev --all-packages`, no
# --group) and default CI never install it, and hybrid_kb imports it lazily so the
# default-off code path needs no torch. NEVER loaded on the 512m VPS tenant.
rerank = [
    "sentence-transformers>=3.0,<6",
]

# Root-level pytest config so `uv run pytest` from the repo root collects every
# workspace member's suite in one run (the eval comparison needs both Stacks
# importable in-process). ``pythonpath`` puts the repo root on sys.path (so
# ``vector_rag.app`` / ``eval.paraphrase_comparison`` resolve) AND ``markdown_kb/``
# (so markdown_kb's tests keep using their established bare ``import app`` —
# vector_rag is only ever imported via its ``vector_rag.app`` namespace, so the
# two ``app`` packages never collide). Each member's own pyproject still works
# for the standalone ``cd <member> && uv run pytest`` workflow.
#
# Import-mode rationale (issue #324):
#   Two workspace members — ``kb_cli`` and ``kb_mcp`` — have no ``__init__.py``
#   in their ``tests/`` directories (they are not installed packages, just test
#   directories). Under pytest's default ``prepend`` import mode, both of those
#   conftest.py files are imported as the bare module name ``conftest``, which
#   shadows the repo-root ``conftest.py`` (defining ``_PROTECTED`` etc.) in
#   ``sys.modules`` during cross-member collection. ``test_invariant_guard.py``
#   does ``import conftest`` at the top level and therefore picks up the wrong
#   module, causing an ``AttributeError`` on ``_PROTECTED``.
#
#   ``--import-mode=importlib`` makes pytest derive a unique, fully-qualified
#   module name for every conftest (e.g. ``kb_cli.tests.conftest`` rather than
#   bare ``conftest``), so basename collisions are impossible regardless of
#   whether a test directory contains an ``__init__.py``.  This future-proofs
#   the suite against any new rootless test directory being added later.
#
#   ``pythonpath=["."]`` is retained so the repo-root-level ``import conftest``
#   and ``import conftest_support`` in existing tests continue to resolve
#   correctly — importlib mode does not remove repo root from sys.path.
[tool.pytest.ini_options]
testpaths = ["markdown_kb/tests", "vector_rag/tests", "hybrid_kb/tests", "eval/paraphrase_comparison/tests", "eval/negative_case/tests", "eval/rag_distance/tests", "gateway/tests", "kb_mcp/tests", "kb_cli/tests"]
pythonpath = [".", "markdown_kb"]
# vector_rag is an implicit namespace package (no __init__.py), so its test
# package must be resolved as the unique ``vector_rag.tests`` rather than a bare
# ``tests`` that collides with markdown_kb's on-pythonpath ``tests`` package.
consider_namespace_packages = true
addopts = "--strict-markers --import-mode=importlib"
markers = [
    "live: Opt-in live tests that make real OpenAI/embedding API calls; skipped by default.",
]
