[project]
name = "gateway"
version = "0.1.0"
description = "Phase 9 Gateway ASGI app — mounts markdown_kb at /wiki, serves browser UI, exposes POST /chat/stream."
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.136.3",
    "uvicorn==0.34.0",
    "python-dotenv>=1.2.2",
    "markdown-kb",
]

[tool.uv]
package = false

[tool.uv.sources]
markdown-kb = { workspace = true }

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--strict-markers"
markers = [
    "live: Opt-in live integration tests that make real OpenAI API calls; skipped by default.",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "httpx>=0.28",
    "ruff>=0.15.14",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]
ignore = [
    "E501",
    "B008",
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = [
    "F401",
    "B011",
]
