[project]
name = "kb-cli"
version = "0.1.0"
description = "CLI for the knowledge base — one-shot subcommands + interactive REPL. Phase 12 Slice 3 (ADR-0016)."
requires-python = ">=3.11"
dependencies = [
    "typer>=0.9",
    "markdown-kb",
]

[project.scripts]
kb = "kb_cli.main:app"

[tool.uv]
package = true

[tool.uv.sources]
markdown-kb = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
# ".." puts the repo root on sys.path so ``markdown_kb`` and ``vector_rag``
# namespace packages resolve when running pytest from inside kb_cli/.
pythonpath = [".."]
addopts = "--strict-markers"
markers = [
    "live: Opt-in live integration tests that make real OpenAI API calls; skipped by default.",
]

[dependency-groups]
dev = [
    "pytest>=9.0",
    "ruff>=0.15",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]
ignore = [
    "E501",
    "B008",
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = [
    "F401",
    "B011",
]
