[project]
name = "markdown-kb"
version = "0.1.0"
description = "Markdown KB retrieval strategy: BM25 over heading sections."
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.136.3",
    "uvicorn==0.34.0",
    "openai==2.38.0",
    "langchain-core==1.4.0",
    "langchain-openai==1.2.2",
    "python-dotenv>=1.2.2",
]

[tool.uv]
package = false

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--strict-markers"
markers = [
    "live: Opt-in live integration tests that make real OpenAI API calls; skipped by default.",
]

[dependency-groups]
dev = [
    "ruff>=0.15.14",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
# Defaults (E, F) plus: I (isort), B (bugbear), UP (pyupgrade), SIM (simplify).
# Skip ANN, D — those are style noise without a project-wide commitment.
select = ["E", "F", "I", "B", "UP", "SIM"]
ignore = [
    "E501",  # line length — enforced by formatter, not lint
    "B008",  # function call in default arg — FastAPI dependency injection idiom
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = [
    "F401",  # unused imports OK in tests (fixture re-exports)
    "B011",  # `assert False` is fine in tests
]
