[project]
name = "vector-rag"
version = "0.1.0"
description = "Vector RAG retrieval strategy: FAISS over chunked Markdown."
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.136.3",
    "uvicorn==0.34.0",
    "langchain==1.3.1",
    "langchain-community==0.3.14",
    "langchain-openai==1.2.2",
    "faiss-cpu==1.9.0.post1",
]

[tool.uv]
package = false
