[project]
name = "vector-rag"
version = "0.1.0"
description = "Vector RAG retrieval strategy (Stack B): FAISS over chunked Markdown Sections."
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.136.3",
    "uvicorn==0.34.0",
    "langchain==1.3.1",
    "langchain-community==0.4.2",
    "langchain-openai==1.2.2",
    "langchain-text-splitters>=1.0",
    "faiss-cpu==1.9.0.post1",
    "markdown-kb",
    "python-dotenv>=1.2.2",
    "openai==2.38.0",
]

[tool.uv]
package = false

[tool.uv.sources]
markdown-kb = { workspace = true }
